// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Module/Components <App /> should be rendered 1`] = `
<div
  className="app"
>
  <div
    className="app__main-container"
  >
    <main
      className="app__content"
    />
  </div>
</div>
`;

exports[`App Module/Components <App /> should be rendered with children 1`] = `
<div
  className="app"
>
  <div
    className="app__main-container"
  >
    <main
      className="app__content"
    >
      Test
    </main>
  </div>
</div>
`;
